facet-styx/src/snapshots/facet_styx__schema_error__tests__invalid_variant_diagnostic.snap
---
source: crates/facet-styx/src/schema_error.rs
expression: rendered
---
Error: invalid enum variant '@unknown'
   ╭─[ test.styx:1:8 ]
   │
 1 │ status @unknown
   │        ────┬───  
   │            ╰───── expected one of: active, inactive, pending
───╯
